--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task Processing (JSON-CRUD2)",
-  "description": "The JSON-CRUD-V2 version of the TPS sample NodeJS app from @RWCBook",
-  "repository": "https://github.com/RWCBook/json-crud-v2",
+  "name": "Task Processing (JSON-Client2)",
+  "description": "The JSON-Client-V2 version of the TPS Client NodeJS app from @RWCBook",
+  "repository": "https://github.com/RWCBook/json-client-v2",
   "logo": "https://avatars2.githubusercontent.com/u/16432667?v=3&s=200",
   "keywords": ["Hypermedia", "REST", "RWCBook", "JSON", "CRUD", "RPC", "Client"]
 }
